fixed bet amount button to stretch to parent width

--- a/black-jack/blackJack.css
+++ b/black-jack/blackJack.css
@@ -149,7 +149,6 @@ html {
 
 #bet-button {
   visibility: hidden;
-  margin-right: 100px;
   margin-bottom: 8px;
 }
 
